# power-load-forcasting

./: NER_Detection.ipynb  README.md  eda.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: eda-checkpoint.ipynb
backend/: .env  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
