[project]
name = "forcasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "jupyterlab>=4.4.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "numpy==2.2.*",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "shap>=0.48.0",
    "xgboost>=3.0.3",
]
