[project]
name = "forcasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "jupyterlab>=4.4.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "numpy==2.2.*",
    "ollama>=0.5.1",
    "pandas>=2.3.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "scikit-learn>=1.7.1",
    "shap>=0.48.0",
    "xgboost>=3.0.3",
]
